grammar.js
  script: $ => seq(opt(/<\?[hH][hH]/), rep($._statement)),

  identifier: $ => identifier,

  variable: $ => token(seq('$', identifier)),

  pipe_variable: $ => '$$',

  // TODO: More types?
  _keyword: $ =>
    choice(
      'type',
      'newtype',
      'shape',
      'tupe',
      'clone',
      'new',
      'print',
      $._primitive_type,
      $._collection_type,
    ),

  qualified_identifier: $ =>
    choice(
      seq(opt($.identifier), seq.rep1($._backslash, $.identifier)),
      $.identifier,
    ),

  _backslash: $ => '\\',

  scoped_identifier: $ =>
    seq(
      choice(
        $.qualified_identifier,
        $.variable,
        $.scope_identifier,
        $._xhp_identifier,
        $.pipe_variable,
      ),
      '::',
      choice($.identifier, $.variable),
    ),

  scope_identifier: $ => choice('self', 'parent', 'static'),

  _variablish: $ =>
    choice(
      $.variable,
      $.pipe_variable,
      $.list_expression,
      $.subscript_expression,
      $.qualified_identifier,
      $.parenthesized_expression,
      $.call_expression,
      $.scoped_identifier,
      $.scope_identifier,
      $.selection_expression,
      $._xhp_identifier,
    ),

  _statement: $ =>
    choice(
      $._declaration,

      $.compound_statement,
      $.empty_statement,
      $.expression_statement,

      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.throw_statement,
      $.echo_statement,
      $.unset_statement,

      $.use_statement,
      $.if_statement,
      $.while_statement,
      $.do_statement,
      $.for_statement,
      $.switch_statement,
      $.foreach_statement,
      $.try_statement,
      $.concurrent_statement,
      $.using_statement,
    ),

  braced_expression: $ => seq('{', $._expression, '}'),

  _expression: $ =>
    choice(
      $.heredoc,
      $.array,
      $.tuple,
      $.shape,
      $.collection,
      $._literal,
      $._variablish,
      $.prefixed_string,
      $.parenthesized_expression,
      $.binary_expression,
      $.prefix_unary_expression,
      $.postfix_unary_expression,
      $.is_expression,
      $.as_expression,
      $.awaitable_expression,
      $.yield_expression,
      $.cast_expression,
      $.ternary_expression,
      $.lambda_expression,
      $.call_expression,
      $.selection_expression,
      $.new_expression,
      $.include_expression,
      $.require_expression,
      $.anonymous_function_expression,
      $.xhp_expression,
    ),

  // Statements

  expression_statement: $ => seq($._expression, ';'),

  compound_statement: $ => seq('{', rep($._statement), '}'),

  return_statement: $ => seq('return', opt($._expression), ';'),

  concurrent_statement: $ => seq('concurrent', $.compound_statement),

  use_clause: $ =>
    seq(
      opt($.use_type),
      $._namespace_identifier,
      field('alias', seq.opt('as', $.identifier)),
    ),

  _namespace_identifier: $ =>
    choice(seq($.qualified_identifier, opt($._backslash)), $._backslash),

  float: $ =>
    token(
      choice(
        // 1., 1.0 , 1.0E1, 1.E1
        /\d+\.\d*([eE][+-]?\d+)?/,

        // .1, 0.1 , 0.1E1, .1E1
        /\d*\.\d+([eE][+-]?\d+)?/,

        // 1E1
        /\d+[eE][+-]?\d+/,
      ),
    ),

  integer: $ =>
    token(
      choice(
        // Integer
        /[1-9]\d*/,
        // Octal - Hack seems to accept non octal literals like 09. Intentional?
        /0[0-7]*/,
        // Hex
        /0[xX][0-9a-fA-F]+/,
        // Binary
        /0[bB][01]+/,
      ),
    ),

  // Tree-sitter confuses boolean /(true|false)/ with identifier. Don't know why.
  true: $ => choice('true', 'True', 'TRUE'),
  false: $ => choice('false', 'False', 'FALSE'),

  null: $ => choice('null', 'Null', 'NULL'),

  // prettier-ignore
  string: $ =>
    token(
      choice(
        /'(\\'|\\\\|\\?[^'\\])*'/,
        /"(\\"|\\\\|\\?[^"\\])*"/,
      ),
    ),

  prefixed_string: $ => seq(field('prefix', $.identifier), $.string),

  // Types

  _type: $ =>
    choice(
      $.type_specifier,
      $.type_constant,
      $.shape_type_specifier,
      $.function_type_specifier,
      $.tuple_type_specifier,
    ),

  type_specifier: $ =>
    seq(
      rep($._type_modifier),
      choice(
        $._primitive_type,
        $.qualified_identifier,
        $._collection_type,
        $._xhp_identifier,
      ),
      opt($.type_arguments),
    ),

  _type_modifier: $ =>
    choice(
      alias('@', $.soft_modifier),
      alias('?', $.nullable_modifier),
      alias('~', $.like_modifier),
    ),

  tuple_type_specifier: $ =>
    seq(rep($._type_modifier), '(', com($._type, ','), ')'),

  function_type_specifier: $ =>
    seq(
      rep($._type_modifier),
      '(',
      /function\s*\(/,
      com.opt(opt($.inout_modifier), $._type, opt($.variadic_modifier), ','),
      ')',
      ':',
      field('return_type', $._type),
      ')',
    ),

  shape_type_specifier: $ =>
    seq(
      rep($._type_modifier),
      'shape',
      '(',
      com.opt(choice($.field_specifier, alias('...', $.open_modifier)), ','),
      ')',
    ),

  field_specifier: $ =>
    seq(alias.opt('?', $.optional_modifier), $._expression, '=>', $._type),

  _collection_type: $ =>
    choice('array', 'varray', 'darray', 'vec', 'dict', 'keyset'),

  _primitive_type: $ =>
    choice(
      'bool',
      'float',
      'int',
      'string',
      'arraykey',
      'void',
      'nonnull',
      $.null,
      'mixed',
      'dynamic',
      'noreturn',
    ),

  type_arguments: $ => seq('<', com.opt($._type, ','), '>'),

  array: $ =>
    seq(
      alias($._collection_type, $.array_type),
      opt($.type_arguments),
      '[',
      com.opt(choice($._expression, $.element_initializer), ','),
      ']',
    ),

  element_initializer: $ => prec.right(seq($._expression, '=>', $._expression)),

  tuple: $ => seq('tuple', '(', com.opt($._expression, ','), ')'),

  shape: $ => seq('shape', '(', com.opt($.field_initializer, ','), ')'),

  field_initializer: $ =>
    seq(choice($.string, $.scoped_identifier), '=>', $._expression),

  collection: $ =>
    seq(
      $.qualified_identifier,
      '{',
      com.opt(choice($._expression, $.element_initializer), ','),
      '}',
    ),

  // Expressions

  include_expression: $ =>
    prec.include(seq(choice('include', 'include_once'), $._expression)),

  require_expression: $ =>
    prec.include(seq(choice('require', 'require_once'), $._expression)),

  parenthesized_expression: $ => seq('(', $._expression, ')'),

  subscript_expression: $ =>
    prec.subscript(seq($._expression, '[', opt($._expression), ']')),

  list_expression: $ => seq('list', '(', com(opt($._expression), ','), ')'),

  binary_expression: $ =>
    choice(
      ...[
        '|>',
        '??',
        '||',
        '&&',
        '|',
        '^',
        '&',
        '==',
        '!=',
        '===',
        '!==',
        '<',
        '>',
        '<=',
        '>=',
        '<=>',
        '<<',
        '>>',
        '+',
        '-',
        '.',
        '*',
        '/',
        '%',
        '**',

        '?:',

        '=',
        '??=',
        '.=',
        '|=',
        '^=',
        '&=',
        '<<=',
        '>>=',
        '+=',
        '-=',
        '*=',
        '/=',
        '%=',
        '**=',
      ].map(operator =>
        prec[operator](
          seq(
            field('left', $._expression),
            field('operator', operator),
            field('right', $._expression),
          ),
        ),
      ),
    ),

  prefix_unary_expression: $ =>
    choice(
      ...[
        ['!', prec.unary],
        ['~', prec.unary],
        ['-', prec.unary],
        ['+', prec.unary],
        ['++', prec.prefix],
        ['--', prec.prefix],
        ['print', prec.print],
        ['clone', prec.clone],
        ['await', prec.await],
        ['@', prec.error],
      ].map(([operator, prec]) =>
        prec(seq(field('operator', operator), field('operand', $._expression))),
      ),
    ),

  postfix_unary_expression: $ =>
    prec.postfix(seq($._expression, choice('++', '--'))),

  is_expression: $ =>
    prec.is(seq(field('left', $._expression), 'is', field('right', $._type))),

  as_expression: $ =>
    prec.as(
      seq(
        field('left', $._expression),
        choice(token(prec.dynamic(-1, 'as')), '?as'),
        field('right', $._type),
      ),
    ),

  awaitable_expression: $ => seq('async', $.compound_statement),

  yield_expression: $ =>
    prec.right(seq('yield', choice($._expression, $.element_initializer))),

  cast_expression: $ =>
    prec.cast(
      seq(
        '(',
        field('type', choice('array', 'int', 'float', 'string', 'bool')),
        ')',
        field('value', $._expression),
      ),
    ),

  ternary_expression: $ =>
    prec.ternary(
      seq(
        field('condition', $._expression),
        '?',
        field('consequence', $._expression),
        ':',
        field('alternative', $._expression),
      ),
    ),

  lambda_expression: $ =>
    seq(
      opt($.attribute_modifier),
      opt($.async_modifier),
      choice(
        // Make a single-parameter lambda node look like any other lambda node.
        alias($._single_parameter_parameters, $.parameters),
        seq($.parameters, seq.opt(':', field('return_type', $._type))),
      ),
      '==>',
      field('body', choice($._expression, $.compound_statement)),
    ),

  _single_parameter_parameters: $ => alias($._single_parameter, $.parameter),

  call_expression: $ =>
    prec.paren(
      seq(
        field('function', choice($._expression, $._collection_type)),
        opt($.type_arguments),
        $.arguments,
      ),
    ),

  new_expression: $ =>
    prec.new(seq('new', $._variablish, opt($.type_arguments), $.arguments)),

  arguments: $ => seq('(', com.opt($.argument, ','), ')'),

  argument: $ =>
    seq(choice.opt($.inout_modifier, $.variadic_modifier), $._expression),

  selection_expression: $ =>
    prec.select(
      seq(
        choice($._variablish, $.as_expression),
        field('selection_operator', choice('?->', '->')),
        choice(
          $._variablish,
          $.braced_expression,
          alias($._keyword, $.identifier),
        ),
      ),
    ),

  // Declarations

  alias_declaration: $ =>
    seq(
      opt($.attribute_modifier),
      choice('type', 'newtype'),
      $.identifier,
      opt($.type_parameters),
      field('as', seq.opt('as', $._type)),
      '=',
      $._type,
      ';',
    ),

  function_declaration: $ =>
    seq(
      opt($.attribute_modifier),
      $._function_declaration_header,
      choice(field('body', $.compound_statement), ';'),
    ),

  _function_declaration_header: $ =>
    seq(
      opt($.async_modifier),
      'function',
      field('name', $.identifier),
      opt($.type_parameters),
      $.parameters,
      seq.opt(':', opt($.attribute_modifier), field('return_type', $._type)),
      opt($.where_clause),
    ),

  parameters: $ =>
    prec.paren(
      seq('(', choice.opt($.variadic_modifier, com($.parameter, ',')), ')'),
    ),

  parameter: $ =>
    seq(
      opt($.attribute_modifier),
      opt($.visibility_modifier),
      opt($.inout_modifier),
      field('type', opt($._type)),
      opt($.variadic_modifier),
      field('name', $.variable),
      seq.opt('=', field('default_value', $._expression)),
    ),

  class_declaration: $ =>
    seq(
      opt($.attribute_modifier),
      opt($._class_modifier),
      opt($._class_modifier),
      opt($.xhp_modifier),
      'class',
      field('name', choice($.identifier, $._xhp_identifier)),
      opt($.type_parameters),
      opt($.extends_clause),
      opt($.implements_clause),
      opt($.where_clause),
      field('body', $.member_declarations),
    ),

  member_declarations: $ =>
    seq(
      '{',
      choice.rep(
        alias($._class_const_declaration, $.const_declaration),
        $.method_declaration,
        $.property_declaration,
        $.type_const_declaration,
        $.trait_use_clause,
        $.require_implements_clause,
        $.require_extends_clause,
        $.xhp_attribute_declaration,
        $.xhp_children_declaration,
        $.xhp_category_declaration,
      ),
      '}',
    ),

  _class_const_declaration: $ =>
    seq(
      rep($._member_modifier),
      'const',
      field('type', opt($._type)),
      com(alias($._class_const_declarator, $.const_declarator)),
      ';',
    ),

  _class_modifier: $ => choice($.abstract_modifier, $.final_modifier),

  xhp_modifier: $ => 'xhp',

  attribute_modifier: $ =>
    seq('<<', com($.qualified_identifier, opt($.arguments), ','), '>>'),

  inout_modifier: $ => 'inout',

  variadic_modifier: $ => '...',

  async_modifier: $ => 'async',

  xhp_identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*([-:][a-zA-Z0-9_]+)*/,

  xhp_class_identifier: $ => /:[a-zA-Z_][a-zA-Z0-9_]*([-:][a-zA-Z0-9_]+)*/,

  _xhp_identifier: $ => choice($.xhp_identifier, $.xhp_class_identifier),

  xhp_expression: $ =>
    choice(
      $.xhp_open_close,
      seq(
        $.xhp_open,
        rep(
          choice(
            $.xhp_string,
            $.xhp_comment,
            $.braced_expression,
            $.xhp_expression,
          ),
        ),
        $.xhp_close,
      ),
    ),

  xhp_comment: $ => token(seq('<!--', /(-?>)?([^>]|[^-]>|[^-]->)*/, '-->')),

  xhp_string: $ => token(prec(1, /[^<{]+/)),

  xhp_open: $ => seq('<', $._xhp_identifier, rep($.xhp_attribute), '>'),

  xhp_open_close: $ => seq('<', $._xhp_identifier, rep($.xhp_attribute), '/>'),

  xhp_close: $ => seq('</', $._xhp_identifier, '>'),

  xhp_attribute: $ =>
    choice(
      seq($.xhp_identifier, '=', choice($.string, $.braced_expression)),
      choice($.braced_expression, $.xhp_spread_expression),
    ),

  xhp_spread_expression: $ => seq('{', '...', $._expression, '}'),

  xhp_attribute_declaration: $ =>
    seq('attribute', com($.xhp_class_attribute), ';'),

  xhp_class_attribute: $ =>
    seq(
      field('type', choice($._type, $.xhp_enum_type)),
      field('name', opt($.xhp_identifier)),
      seq.opt('=', field('default', $._expression)),
      choice.opt('@required', '@lateinit'),
    ),

  xhp_enum_type: $ =>
    seq('enum', '{', com(choice($.string, $.integer), ','), '}'),

  comment: $ =>
    token(
      choice(
        seq('#', /.*/),
        seq('//', /.*/),
        seq('/*', /[^*]*\*+([^/*][^*]*\*+)*/, '/'),
      ),
    ),

  // Future Deprecations

  anonymous_function_expression: $ =>
    seq(
      opt($.async_modifier),
      'function',
      $.parameters,
      seq.opt(':', field('return_type', $._type)),
      alias.opt($._anonymous_function_use_clause, $.use_clause),
      field('body', $.compound_statement),
    ),

  _anonymous_function_use_clause: $ =>
    seq('use', '(', com($.variable, ','), ')'),

  // See https://github.com/hhvm/xhp-lib/pull/276 for deprecation info
